# cpp-advanced-topics

./: .gitignore  CMakeLists.txt  README.md  consumer.cpp  donut.c  functional_programming.cpp  gitpush.sh  main.cpp  main.h  publisher.cpp
cpp20/: CMakeLists.txt
cpp20/src/: base.h  concepts_examples.cpp  corutines.cpp  flyweight.cpp  function_template.cpp  main.cpp  shared_pointers.cpp  unique_pointers.cpp
cppnano/: CMakeLists.txt
cppnano/src/: cache_memory.cpp  deep_copy.cpp  exclusive_ownership.cpp  heap_memory_example.cpp  malloc_v_new.cpp  memory.cpp  memory_leaks_debug.cpp  my_class.h  new_and_delete_overloading.cpp  no_copy.cpp  pointer_conversion.cpp  r_32.cpp  r_34.cpp  rule_of_three.cpp  rvalue_example.cpp  rvalue_references.cpp  shared_copy.cpp  shared_pointer.cpp  shared_pointer2.cpp  shared_pointer3.cpp  unique_pointer.cpp  weak_pointer.cpp  weak_pointer2.cpp
cppnano/src/debug/: valgrid.txt
cppnano/src/threads/: CMakeLists.txt  thread_test.cpp
cppnano/threads/: CMakeLists.txt  async_task.cpp  concurrency_bug.cpp  concurrent_message_queue.cpp  concurrent_message_queue_solution.cpp  data_races_example.cpp  data_races_example2.cpp  data_races_example3.cpp  data_races_example4.cpp  data_races_move_semantic.cpp  deadlock_example.cpp  deadlock_example2.cpp  future_example.cpp  future_wait_for.cpp  hello_threads.cpp  lock_guard_example.cpp  locks_to_avoid_deadlocks.cpp  locks_to_avoid_deadlocks_solution.cpp  monitor_object_pattern.cpp  monitor_object_pattern_improved.cpp  pass_lambdas_to_threads.cpp  protected_shated_pointer.cpp  protected_shated_pointer_solution.cpp  protected_shated_pointer_solution_with_timed_mutex.cpp  quize_one.cpp  thread_vs_task.cpp  thread_vs_task2.cpp  thread_with_function_object.cpp  unique_lock_guard_example.cpp  variadic_templates.cpp
cppthings/: CMakeLists.txt
cppthings/new_cpp/: CMakeLists.txt  move_only_constructor.cpp
cppthings/smart-pointers/: raw_pointers.cpp  smart_pointers.cpp  unique_pointers.cpp  unique_ptrs.cpp
cppthings/src/: Person.cpp  Person.h  Resource.cpp  Resource.h  ascii_codes.cpp  basic_syntaxs.cpp  binary_file.cpp  constructor_things.cpp  constructors.cpp  exception_handling.cpp  exceptions.cpp  expresions.cpp  file_io.cpp  freind_func.cpp  func_overriding.cpp  inheritance.cpp  main.cpp  manual_memory_management.cpp  map_filter_reduce.cpp  memory_management.cpp  move_semantics.cpp  oop.cpp  operator_overloading.cpp  static_member.cpp  static_polymorphism.cpp  unformatted_chars.cpp
cppthings/src/inheritance/: CMakeLists.txt  Person.cpp  Person.h  Resource.cpp  Resource.h  Tweeter.cpp  Tweeter.h  cast_demo.cpp  main.cpp
cppthings/src/lamdas/: CMakeLists.txt  lmabdas.cpp
cppthings/stl/: CMakeLists.txt
cppthings/stl/src/: base.h  define_implicit_type_convertions.cpp  raii.cpp  resource_management_class.cpp  vec.cpp  virtual_constructor.cpp
cppthings/threads/: CMakeLists.txt
cppthings/threads/bo_qian/: dead_lock.cpp
cppthings/threads/src/: abandoned_lock.cpp  deadlock_demo.cpp  llivelock_demo.cpp  main.cpp  mutual_exclusion.cpp  recursive_mutex.cpp  shared_mutex.cpp  starvation_lock.cpp  try_lock.cpp
cppthings/threads/udemy/: async_demos.cpp  blocking_que.cpp  callable_objects.cpp  conditional_vars.cpp  hello_world.cpp  package_task.cpp  promises_futures.cpp
cppthings/unittests/: mock_test.cpp  sample.cpp
design-patterns/: CMakeLists.txt
design-patterns/src/: abstract_factory.cpp  builder.cpp  factory_method.cpp  factory_method_boris.cpp  prototype.cpp  singleton.cpp
design-patterns/src/behavioral/: adapter.cpp  chainof_responsibility.cpp  command_pattern.cpp
design-patterns/src/ll/: CMakeLists.txt
ds/leetcode/: CMakeLists.txt
ds/leetcode/14days-cracking/: CMakeLists.txt
ds/leetcode/arrays/: CMakeLists.txt
ds/leetcode/backtracking/: CMakeLists.txt
ds/leetcode/bitmanupulations/: CMakeLists.txt
ds/leetcode/contests/: CMakeLists.txt
ds/leetcode/disjoint_set/: CMakeLists.txt
ds/leetcode/dp/: CMakeLists.txt
ds/leetcode/graph/: CMakeLists.txt
ds/leetcode/greedy/: CMakeLists.txt
ds/leetcode/linkedlist/: CMakeLists.txt
ds/leetcode/map_n_set/: CMakeLists.txt
ds/leetcode/math/: CMakeLists.txt
ds/leetcode/matrix/: CMakeLists.txt
ds/leetcode/practice/: CMakeLists.txt
ds/leetcode/src/: 3sum.cpp  4sum.cpp  add_binary.cpp  arrange_coins.cpp  b_tree_inorder_travesal.cpp  balance_b_tree.cpp  base.h  best_time_to_buy_and_sell_stock_iii.cpp  best_time_to_buy_and_sell_stocks.cpp  bit_wise_and_number_rang.cpp  btree_level_order_travelsal.cpp  btree_path.cpp  btree_postorder.cpp  btree_preorder.cpp  btree_right_side_view.cpp  btree_zigzag_level_order.cpp  climbing_stairs.cpp  clone_graph.cpp  combination_sum.cpp  combination_sum_ii.cpp  construct_binary_tree_from_preorder_traversal.cpp  convert_sorted_array_to_btree.cpp  count_and_say.cpp  count_complete_tree_nodes.cpp  course_schedule.cpp  course_schedule_ii.cpp  cousins_in_btree.cpp  daily_tempreture.cpp  delete_duplicate_nodes.cpp  detect_linked_list_cycles.cpp  diameter_of_binary_trr.cpp  excel_sheet_column_number.cpp  excel_sheet_column_title.cpp  (+115 more)
dsa/: CMakeLists.txt
dsa/src/: base.h  doubly_linkedlist.cpp  doubly_linkedlist.h  graph.h  graph_app.cpp  linked_list.h  linkedlist_app.cpp  main.cpp  my_error.h  queue.h  queue_app.cpp  stack.cpp  stack.h  trees.h  trees_app.cpp
low_latency/: CMakeLists.txt
low_latency/src/: async_task.cpp  blocking_queue.cpp  lock_free_queue.cpp  main.cpp  promise_n_future.cpp  shared_data.cpp  structuring_code_for_protect_data.cpp
network_programming/: CMakeLists.txt
network_programming/src/: dual_stack_server.cpp  generic_tcp_client.cpp  get_local_network_details.cpp  socket_connect.cpp
opengl/: CMakeLists.txt
opengl/include/: ogldev_math_3d.h  ogldev_types.h
opengl/sharders/: shader.fs
opengl/src/: build.sh  opengl_dot_demo.cpp  opengl_init.cpp  opengl_triangle.cpp
structural_patterns/: CMakeLists.txt
unit_tests/: CMakeLists.txt
unit_tests/src/: Employee.h  EmployeeManager.cpp  EmployeeManager.h  IDatabaseConnection.cpp  IDatabaseConnection.h  TestRunner.cpp
(+647 files in other folders)
