cmake_minimum_required(VERSION 3.10)
project(advanced_topics)

set(CMAKE_CXX_STANDARD 17)

#add_executable(advanced_topics main.cpp)
#add_executable(pointers pointers/pointers_01.cpp)
#add_executable(pointers pointers/pointers_02.cpp)
#add_executable(pointers pointers/pointers_03.cpp)
#add_executable(pointers pointers/pointers_as_function_arguments.cpp)
#add_executable(pointers pointers/pointers_and_arrays.cpp)
#add_executable(pointers pointers/arrays_as_function_arguments.cpp)
#add_executable(pointers pointers/charater_arrays_and_pointers.cpp)
#add_executable(pointers pointers/pointers_and_multidimentional_arrays.cpp)
#add_executable(pointers pointers/dyanamic_memory_allocation_cpp.cpp)
#add_executable(pointers pointers/dyanamic_memory_allocation_c_starndand_libs.cpp)
#add_executable(pointers pointers/pointers_as_function_returns.cpp)
#add_executable(pointers pointers/function_pointers.cpp)
#add_executable(pointers pointers/function_pointers_and_callbacks.cpp)

#add_executable(dsstructures ds/linked_list.cpp)
#add_executable(dsstructures ds/doubly_linked_list.cpp)
#add_executable(dsstructures ds/binary_search_tree.cpp)


#add_executable(header-files header-files/main.cpp header-files/PrintString.cpp header-files/PrintString.cpp)
#add_executable(header-files header-files/CarMain.cpp header-files/Car.cpp header-files/Car.h)
#add_executable(level-order ds/level_order_traversal.cpp)
#add_executable(path-planning path-planning/a_star.cpp)
#add_executable(idioms idioms/return_type_resolver.cpp)
#add_executable(idioms idioms/nullpointer.cpp)
#add_executable(idioms idioms/type_erasure.cpp)

#add_executable(ds ds/linkedlist.cpp)
#add_executable(ds ds/stack.cpp)
#add_executable(ds ds/statck_with_linkedlist.cpp)
#add_executable(ds ds/doublylinkedlist.cpp)
#add_executable(classes_and_objects classes_and_objects/friend_function.cpp)
add_executable(ds ds/queue.cpp)