project(cppnano)

add_executable(memory src/memory.cpp)
add_executable(cache_memory src/cache_memory.cpp)
add_executable(malloc_v_new src/malloc_v_new.cpp)
add_executable(overloading src/new_and_delete_overloading.cpp)
add_executable(heapmemexhample src/heap_memory_example.cpp)
add_executable(nocpoy src/no_copy.cpp)
add_executable(exclusiveownership src/exclusive_ownership.cpp)
add_executable(deepcopy src/deep_copy.cpp)
add_executable(sharedcopy src/shared_copy.cpp)