project(cppnano)

add_definitions(-std=c++11)
set(CXX_FLAGS "-Wall")

#add_executable(memory src/memory.cpp)
#add_executable(cache_memory src/cache_memory.cpp)
#add_executable(malloc_v_new src/malloc_v_new.cpp)
#add_executable(overloading src/new_and_delete_overloading.cpp)
#add_executable(heapmemexhample src/heap_memory_example.cpp)
#add_executable(nocpoy src/no_copy.cpp)
#add_executable(exclusiveownership src/exclusive_ownership.cpp)
#add_executable(deepcopy src/deep_copy.cpp)
#add_executable(sharedcopy src/shared_copy.cpp)
#add_executable(rvalue src/rvalue_references.cpp)
#add_executable(rvalue_example src/rvalue_example.cpp)
#add_executable(ruleofthree src/rule_of_three.cpp)
#add_executable(uniqueptr src/unique_pointer.cpp)
#add_executable(sharedpointer src/shared_pointer.cpp)
add_executable(sharedpointer2 src/shared_pointer2.cpp)