project(cppthings)

#add_executable(basicsyntacxs src/basic_syntaxs.cpp)
#add_executable(fileio src/file_io.cpp)
#add_executable(binaryfile src/binary_file.cpp)
#add_executable(unformatted_chars src/unformatted_chars.cpp)
#add_executable(app src/main.cpp)
add_executable(map_filter_reduce src/map_filter_reduce.cpp)