project(networks)

set(CMAKE_CXX_FLAGS "-std=c++17 -fsanitize=address -ggdb3 -Wall -Wextra -pedantic -Werror")

add_executable(get_host_details src/get_host_details.cpp)
add_executable(get_local_network_details src/get_local_network_details.cpp)
add_executable(get_interfaces_details src/get_intefaces_details.cpp)
add_executable(get_address_info src/get_address_info.cpp)
add_executable(socket01 src/socket01.cpp)
add_executable(socket02 src/socket02.cpp)
add_executable(socket_connect src/socket_connect.cpp)
add_executable(socket_listen src/socket_listern.cpp)
add_executable(server01 src/server01.cpp)
add_executable(client01 src/client01.cpp)
add_executable(dual_stack_server src/dual_stack_server.cpp)