project(threads)

SET(CMAKE_CXX_FLAGS "-std=c++17 -pthread -O3 -pedantic -Wall -Werror")

#add_executable(threadtest thread_test.cpp)
#add_executable(hellothreads hello_threads.cpp)
#add_executable(quize_one quize_one.cpp)
#add_executable(thread_with_function_object thread_with_function_object.cpp)
#add_executable(pass_lambdas_to_threads pass_lambdas_to_threads.cpp)
#add_executable(variadic_templates variadic_templates.cpp)
#add_executable(concurrency_bug concurrency_bug.cpp)
#add_executable(future_example future_example.cpp)
#add_executable(future_wait_for future_wait_for.cpp)
#add_executable(async_task async_task.cpp)
#add_executable(thread_vs_task thread_vs_task.cpp)
add_executable(thread_vs_task2 thread_vs_task2.cpp)