project(threads)

SET(CMAKE_CXX_FLAGS "-std=c++17 -pthread -O3 -pedantic -Wall -Werror")

#add_executable(threadtest thread_test.cpp)
#add_executable(hellothreads hello_threads.cpp)
#add_executable(quize_one quize_one.cpp)
#add_executable(thread_with_function_object thread_with_function_object.cpp)
#add_executable(pass_lambdas_to_threads pass_lambdas_to_threads.cpp)
#add_executable(variadic_templates variadic_templates.cpp)
#add_executable(concurrency_bug concurrency_bug.cpp)
#add_executable(future_example future_example.cpp)
#add_executable(future_wait_for future_wait_for.cpp)
#add_executable(async_task async_task.cpp)
#add_executable(thread_vs_task thread_vs_task.cpp)
#add_executable(thread_vs_task2 thread_vs_task2.cpp)
#add_executable(data_races_example data_races_example.cpp)
#add_executable(data_races_example2 data_races_example2.cpp)
#add_executable(data_races_example3 data_races_example3.cpp)
#add_executable(data_races_move_semantic data_races_move_semantic.cpp)
#add_executable(data_races_example4 data_races_example4.cpp)
#add_executable(protected_shated_pointer protected_shated_pointer.cpp)
#add_executable(protected_shated_pointer_solution protected_shated_pointer_solution.cpp)
#add_executable(solution_with_timed_mutex protected_shated_pointer_solution_with_timed_mutex.cpp)
#add_executable(deadlock_example deadlock_example.cpp)
add_executable(deadlock_example2 deadlock_example2.cpp)